--- a/components/autogen/couchdb/Makefile.in
+++ b/components/autogen/couchdb/Makefile.in
@@ -40,6 +40,8 @@ DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(top_srcdir)/configure \
 	$(top_srcdir)/src/couchdb/priv/couch_js/win32/couchjs.vcxproj.tpl.in \
 	$(top_srcdir)/src/couchdb/priv/couch_js/win32/msbuild.bat.tpl.in \
+	$(top_srcdir)/src/couchdb/priv/icu_driver/win32/couch_icu_driver.vcxproj.tpl.in \
+	$(top_srcdir)/src/couchdb/priv/icu_driver/win32/msbuild.bat.tpl.in \
 	AUTHORS NEWS THANKS build-aux/config.guess \
 	build-aux/config.sub build-aux/depcomp build-aux/install-sh \
 	build-aux/ltmain.sh build-aux/missing
@@ -56,7 +58,9 @@ am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = config.h
 CONFIG_CLEAN_FILES = src/couchdb/priv/couch_js/win32/msbuild.bat.tpl \
-	src/couchdb/priv/couch_js/win32/couchjs.vcxproj.tpl
+	src/couchdb/priv/couch_js/win32/couchjs.vcxproj.tpl \
+	src/couchdb/priv/icu_driver/win32/msbuild.bat.tpl \
+	src/couchdb/priv/icu_driver/win32/couch_icu_driver.vcxproj.tpl
 CONFIG_CLEAN_VPATH_FILES =
 SOURCES =
 DIST_SOURCES =
@@ -153,6 +157,7 @@ CURL_LIBS = @CURL_LIBS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DLLTOOL = @DLLTOOL@
 DSYMUTIL = @DSYMUTIL@
 DUMPBIN = @DUMPBIN@
 ECHO_C = @ECHO_C@
@@ -160,6 +165,7 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 ERL = @ERL@
+ERLANG_INCLUDE = @ERLANG_INCLUDE@
 ERLC = @ERLC@
 ERLC_FLAGS = @ERLC_FLAGS@
 EXEEXT = @EXEEXT@
@@ -170,7 +176,9 @@ HELP2MAN_EXECUTABLE = @HELP2MAN_EXECUTABLE@
 ICU_CFLAGS = @ICU_CFLAGS@
 ICU_CONFIG = @ICU_CONFIG@
 ICU_CXXFLAGS = @ICU_CXXFLAGS@
+ICU_INCLUDE = @ICU_INCLUDE@
 ICU_LIBS = @ICU_LIBS@
+ICU_LIB_DIR = @ICU_LIB_DIR@
 ICU_LOCAL_BIN = @ICU_LOCAL_BIN@
 ICU_LOCAL_CFLAGS = @ICU_LOCAL_CFLAGS@
 ICU_LOCAL_LDFLAGS = @ICU_LOCAL_LDFLAGS@
@@ -194,6 +202,7 @@ LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
+MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
 NM = @NM@
 NMEDIT = @NMEDIT@
@@ -219,6 +228,7 @@ abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
 abs_top_srcdir = @abs_top_srcdir@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_DUMPBIN = @ac_ct_DUMPBIN@
 am__include = @am__include@
@@ -263,7 +273,6 @@ localstatedir = @localstatedir@
 localstatelibdir = @localstatelibdir@
 localstatelogdir = @localstatelogdir@
 localstaterundir = @localstaterundir@
-lt_ECHO = @lt_ECHO@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 msbuild_dir = @msbuild_dir@
@@ -385,6 +394,10 @@ distclean-hdr:
 src/couchdb/priv/couch_js/win32/msbuild.bat.tpl: $(top_builddir)/config.status $(top_srcdir)/src/couchdb/priv/couch_js/win32/msbuild.bat.tpl.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 src/couchdb/priv/couch_js/win32/couchjs.vcxproj.tpl: $(top_builddir)/config.status $(top_srcdir)/src/couchdb/priv/couch_js/win32/couchjs.vcxproj.tpl.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+src/couchdb/priv/icu_driver/win32/msbuild.bat.tpl: $(top_builddir)/config.status $(top_srcdir)/src/couchdb/priv/icu_driver/win32/msbuild.bat.tpl.in
+	cd $(top_builddir) && $(SHELL) ./config.status $@
+src/couchdb/priv/icu_driver/win32/couch_icu_driver.vcxproj.tpl: $(top_builddir)/config.status $(top_srcdir)/src/couchdb/priv/icu_driver/win32/couch_icu_driver.vcxproj.tpl.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
 
 mostlyclean-libtool:
@@ -953,7 +966,7 @@ distcheck-hook:
 distsign: distcheck check
 	@# @@ unpack archive and run diff -r to double check missing files
 	@# @@ does automake have anything that does this?
-	gpg --armor --detach-sig --default-key 43ECCEE1 \
+	gpg --armor --detach-sig --default-key DF3CEBA3 \
 	    < $(top_srcdir)/$(distdir).tar.gz \
 	    > $(top_srcdir)/$(distdir).tar.gz.asc
 	md5sum $(top_srcdir)/$(distdir).tar.gz \
