--- a/components/autogen/couchdb/src/mochiweb/Makefile.in
+++ b/components/autogen/couchdb/src/mochiweb/Makefile.in
@@ -93,6 +93,7 @@ CURL_LIBS = @CURL_LIBS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DLLTOOL = @DLLTOOL@
 DSYMUTIL = @DSYMUTIL@
 DUMPBIN = @DUMPBIN@
 ECHO_C = @ECHO_C@
@@ -100,6 +101,7 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 ERL = @ERL@
+ERLANG_INCLUDE = @ERLANG_INCLUDE@
 ERLC = @ERLC@
 ERLC_FLAGS = @ERLC_FLAGS@
 EXEEXT = @EXEEXT@
@@ -110,7 +112,9 @@ HELP2MAN_EXECUTABLE = @HELP2MAN_EXECUTABLE@
 ICU_CFLAGS = @ICU_CFLAGS@
 ICU_CONFIG = @ICU_CONFIG@
 ICU_CXXFLAGS = @ICU_CXXFLAGS@
+ICU_INCLUDE = @ICU_INCLUDE@
 ICU_LIBS = @ICU_LIBS@
+ICU_LIB_DIR = @ICU_LIB_DIR@
 ICU_LOCAL_BIN = @ICU_LOCAL_BIN@
 ICU_LOCAL_CFLAGS = @ICU_LOCAL_CFLAGS@
 ICU_LOCAL_LDFLAGS = @ICU_LOCAL_LDFLAGS@
@@ -134,6 +138,7 @@ LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
+MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
 NM = @NM@
 NMEDIT = @NMEDIT@
@@ -159,6 +164,7 @@ abs_builddir = @abs_builddir@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
 abs_top_srcdir = @abs_top_srcdir@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_DUMPBIN = @ac_ct_DUMPBIN@
 am__include = @am__include@
@@ -203,7 +209,6 @@ localstatedir = @localstatedir@
 localstatelibdir = @localstatelibdir@
 localstatelogdir = @localstatelogdir@
 localstaterundir = @localstaterundir@
-lt_ECHO = @lt_ECHO@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 msbuild_dir = @msbuild_dir@
@@ -235,64 +240,86 @@ version_minor = @version_minor@
 version_release = @version_release@
 version_revision = @version_revision@
 version_stage = @version_stage@
-mochiwebebindir = $(localerlanglibdir)/mochiweb-r113/ebin
+mochiwebebindir = $(localerlanglibdir)/mochiweb-7c2bc2/ebin
 mochiweb_file_collection = \
-    mochifmt.erl \
-    mochifmt_records.erl \
-    mochifmt_std.erl \
-    mochihex.erl \
-    mochijson.erl \
-    mochijson2.erl \
-    mochinum.erl \
+	mochifmt.erl \
+	mochifmt_records.erl \
+	mochifmt_std.erl \
+	mochiglobal.erl \
+	mochihex.erl \
+	mochijson.erl \
+	mochijson2.erl \
+	mochilists.erl \
+	mochilogfile2.erl \
+	mochinum.erl \
+	mochitemp.erl \
+	mochiutf8.erl \
 	mochiweb.app.in \
-    mochiweb.erl \
-    mochiweb_app.erl \
-    mochiweb_charref.erl \
-    mochiweb_cookies.erl \
-    mochiweb_echo.erl \
-    mochiweb_headers.erl \
-    mochiweb_html.erl \
-    mochiweb_http.erl \
-    mochiweb_multipart.erl \
-    mochiweb_request.erl \
-    mochiweb_response.erl \
-    mochiweb_skel.erl \
-    mochiweb_socket_server.erl \
-    mochiweb_sup.erl \
-    mochiweb_util.erl \
-    reloader.erl
+	mochiweb.erl \
+	mochiweb_acceptor.erl \
+	mochiweb_app.erl \
+	mochiweb_charref.erl \
+	mochiweb_cookies.erl \
+	mochiweb_cover.erl \
+	mochiweb_echo.erl \
+	mochiweb_headers.erl \
+	mochiweb_html.erl \
+	mochiweb_http.erl \
+	mochiweb_io.erl \
+	mochiweb_mime.erl \
+	mochiweb_multipart.erl \
+	mochiweb_request.erl \
+	mochiweb_response.erl \
+	mochiweb_skel.erl \
+	mochiweb_socket.erl \
+	mochiweb_socket_server.erl \
+	mochiweb_sup.erl \
+	mochiweb_util.erl \
+	reloader.erl
 
 mochiwebebin_make_generated_file_list = \
-    mochifmt.beam \
-    mochifmt_records.beam \
-    mochifmt_std.beam \
-    mochihex.beam \
-    mochijson.beam \
-    mochijson2.beam \
-    mochinum.beam \
+	mochifmt.beam \
+	mochifmt_records.beam \
+	mochifmt_std.beam \
+	mochiglobal.beam \
+	mochihex.beam \
+	mochijson.beam \
+	mochijson2.beam \
+	mochilists.beam \
+	mochilogfile2.beam \
+	mochinum.beam \
+	mochitemp.beam \
+	mochiutf8.beam \
 	mochiweb.app \
-    mochiweb.beam \
-    mochiweb_app.beam \
-    mochiweb_charref.beam \
-    mochiweb_cookies.beam \
-    mochiweb_echo.beam \
-    mochiweb_headers.beam \
-    mochiweb_html.beam \
-    mochiweb_http.beam \
-    mochiweb_multipart.beam \
-    mochiweb_request.beam \
-    mochiweb_response.beam \
-    mochiweb_skel.beam \
-    mochiweb_socket_server.beam \
-    mochiweb_sup.beam \
-    mochiweb_util.beam \
-    reloader.beam
+	mochiweb.beam \
+	mochiweb_acceptor.beam \
+	mochiweb_app.beam \
+	mochiweb_charref.beam \
+	mochiweb_cookies.beam \
+	mochiweb_cover.beam \
+	mochiweb_echo.beam \
+	mochiweb_headers.beam \
+	mochiweb_html.beam \
+	mochiweb_http.beam \
+	mochiweb_io.beam \
+	mochiweb_mime.beam \
+	mochiweb_multipart.beam \
+	mochiweb_request.beam \
+	mochiweb_response.beam \
+	mochiweb_skel.beam \
+	mochiweb_socket.beam \
+	mochiweb_socket_server.beam \
+	mochiweb_sup.beam \
+	mochiweb_util.beam \
+	reloader.beam
 
 mochiwebebin_DATA = \
     $(mochiwebebin_make_generated_file_list)
 
 EXTRA_DIST = \
-    $(mochiweb_file_collection)
+    $(mochiweb_file_collection) \
+    mochiweb.app.src \
+    internal.hrl
 
 CLEANFILES = \
     $(mochiwebebin_make_generated_file_list)
