Add couchjs.exe to bin directory
Change-Id: I045b2b9c77f1d9ae1251f16a8515172feaf0641a

--- a/components/autogen/couchdb/src/couchdb/priv/Makefile.in
+++ b/components/autogen/couchdb/src/couchdb/priv/Makefile.in
@@ -900,6 +900,7 @@ install-data-hook:
 @WINDOWS_TRUE@	$(INSTALL) $(JS_LIB_BINARY) $(bindir)
 @WINDOWS_TRUE@	$(INSTALL) .libs/couchspawnkillable.exe \
 @WINDOWS_TRUE@		"$(DESTDIR)$(couchprivdir)/couchspawnkillable.exe"
+@WINDOWS_TRUE@	$(INSTALL) couchjs$(EXEEXT) $(bindir)
 
 uninstall-local:
 	if test -f "$(DESTDIR)$(couchprivlibdir)/couch_erl_driver"; then \
